fix company alignment

--- a/wp-content/themes/mk-group/src/app/sector/sector.component.css
+++ b/wp-content/themes/mk-group/src/app/sector/sector.component.css
@@ -1,6 +1,13 @@
 section.sector {
     padding-top: 9rem;
 }
+section.sector .companies-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
 section.sector .companies-wrapper .single-company {
     text-align: center;
 }
